# TtriumvirateMonitor-Mobile

./: .gitignore  AgentMetricsBoard.js  Complete_Triumvirate-Conversation_Archive.json  Enhanced_Triumvirate_Portal  File-Structure.js  README.md  Triumvirate_Executive_Interface  app.js  app.json  command_and_financial_center.json  package-lock.json  package.json  pnpm-lock.yaml  test-implementation.js  test-scroll-tracker.js  workmanager.js
.github/workflows/: eas-deploy.yml
Store/: README.md  store.js  swarmSlice.js
app/: globals.css  index.tsx  page.tsx
assets/glyphs/: gemini.sgv
boilerplates/: create-project.sh
boilerplates/docs-project/: README.md  mkdocs.yml
boilerplates/nextjs-project/: README.md  package.json
boilerplates/nodejs-project/: package.json
boilerplates/python-project/: README.md  main.py  pyproject.toml
components/: AgentGlyph.js  PerformanceChart.js  PoeticModeToggle.js  ResonanceVisualization.js
components/dashboard/: attribution-status.tsx  bulk-operations.tsx  compliance-monitor.tsx  dashboard-header.tsx  project-overview.tsx  recent-activity.tsx
integrations/: install-integrations.sh  pre-commit-config.py
navigation/: MainStack.js
screens/: HomeScreen.js  MainScreen.js  ScrollResonanceScreen.js
scripts/: add-framework-recursive.js  add-framework.sh  add_framework_recursive.py
services/: gemini.js  scrollTracker.js
templates/: AUTHORSHIP_FRAMEWORK.md  README_TEMPLATE.md  attribution-config.json  code-header-template.js  html-header-template.html  project-metadata.yml  python-header-template.py
(+8 files in other folders)
